Finished tasks with some issues left behind

--- a/css/home_page.css
+++ b/css/home_page.css
@@ -1,14 +1,12 @@
 .home-page-grid-container {
-    height: 100vh;
     overflow-y: hidden;
     margin: 0;
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 250px 250px 1fr;
+    grid-template-rows: 250px 1fr;
     gap: 0px 0px;
     grid-template-areas:
         'search'
-        'add-page'
         'log-list-comps';
 }
 
@@ -29,13 +27,53 @@
 }
 
 .home-page .log-list-components {
+    position: relative;
+    grid-area: log-list-comps;
     display: flex;
     justify-content: center;
-    padding-top: 20px;
+}
+
+/* DATEPICKER ON HOMEPAGE */
+.home-page-search {
+    grid-area: search;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.home-page-search > .datepicker {
+    text-transform: uppercase;
+    font-family: 'Lato', sans-serif;
+    font-weight: bold;
+    text-align: center;
+    border-radius: 25px;
+    outline: transparent;
+    padding: 5px 15px 5px 15px;
+    margin: 2px;
+    border: white;
+    background-color: white;
+
+}
+
+.home-page-search > button {
+    font-family: 'Lato', sans-serif;
+    font-weight: bold;
+    text-align: center;
+    border-radius: 25px;
+    padding: 5px 15px 5px 15px;
+    margin: 2px;
+    border: white;
+    background-color: white;
+}
+
+.home-page-search > button:hover {
+    cursor: pointer;
+    background-color: lightgray;
 }
 
 #future-log .home-page {
     display: none;
+    border-radius: 25px;
 }
 
 #daily-log .home-page {
