--- a/css/navbar.css
+++ b/css/navbar.css
@@ -63,6 +63,7 @@
     padding-top: 25px;
     width: 300px;
     margin: 0;
+    cursor: pointer;
 }
 
 #home .main-content-nav {
