--- a/css/sidebar_stylesheet.css
+++ b/css/sidebar_stylesheet.css
@@ -27,8 +27,6 @@
 }
 
 .tabs-buttonGrp {
-    width: 270px;
-    height: 30px;
     display: flex;
     justify-content: center;
 }
@@ -37,8 +35,6 @@
     border: transparent;
     background-color: transparent;
     border-bottom: 2px solid gray;
-    padding: 1;
-    margin: 0;
 
     font-family: 'Lato', sans-serif;
     font-size: 10pt;
